5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1745_3089.log
== TEST (2019-05-15 15:18:57) 
-- CODE:
x = int(input("Insira um numero: "))

while(x == 0):
	num = int(input("Insira um numero: "))
	x = x + num
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- OUTPUT:
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:39) 
-- CODE:


while(x == 0):
	num = int(input("Insira um numero: "))
	x = x + num
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(x == 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:42) 
-- CODE:


while(x == 0):
	num = int(input("Insira um numero: "))
	x = x + num
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(x == 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:21:25) 
-- CODE:
x = int(input("Insira um numero: "))

while(x == 0):
	x = x + num
print(x)	
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- OUTPUT:
1
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:21:58) 
-- CODE:
x = int(input("Insira um numero: "))

while(x == 0):
	num = int(input("Insira um numero: "))
	x = x + num
print(x)	
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- OUTPUT:
1
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:08) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
while(x == 0):
	soma = soma + x

print(soma)	
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- OUTPUT:
0
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:39) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
while(x == 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- OUTPUT:
0
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:42) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
while(x == 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- OUTPUT:
0
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:21) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
num = 0
while(x == 0):
	soma = soma + x
	num = int(input("insira um numero: "))

print(soma)	
if(x > 0):
	x = "Esquerda"
else:
	x = "Direita"
print(x)
-- OUTPUT:
0
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:45) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
num = 0
while(x == 0):
	soma = soma + x
	num = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
else:
	soma = "Direita"
print(soma)
-- OUTPUT:
0
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:39:24) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
num = 0
while(x != 0):
	soma = soma + x
	num = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
else:
	soma = "Direita"
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:40:27) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
else:
	soma = "Direita"
print(soma)
-- OUTPUT:
12
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:40:44) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
else:
	soma = "Direita"
print(soma)
-- EXECUTION TIME:
0.195279
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Esquerda
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Direita
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:42:49) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"
print(soma)
-- OUTPUT:
12
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:43:04) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"
print(soma)
-- EXECUTION TIME:
0.211324
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Esquerda
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:43:31) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"

-- EXECUTION TIME:
0.137917
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:43:33) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"

-- EXECUTION TIME:
0.159102
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
12
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:43:33) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"

-- EXECUTION TIME:
0.192324
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
12
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:43:33) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:43:33) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"

-- EXECUTION TIME:
0.271785
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1745/3089/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:43:54) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"
print(soma)
-- OUTPUT:
12
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:11) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0

while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"
print(soma)
-- OUTPUT:
12
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:07) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
x = x
while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"
print(soma)
-- OUTPUT:
12
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:46:27) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
x = x
while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"
print(soma)
-- EXECUTION TIME:
0.222335
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Esquerda
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:39) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
x = x
while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Esquerda"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Direita"
print(soma)
-- OUTPUT:
12
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:16) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
x = x
while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Direita"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Esquerda"
print(soma)
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:47:29) 
-- CODE:
x = int(input("Insira um numero: "))
soma = 0
x = x
while(x != 0):
	soma = soma + x
	x = int(input("insira um numero: "))

print(soma)	
if(soma > 0):
	soma = "Direita"
elif(soma == 0):
	soma = "Inicial"
else:
	soma = "Esquerda"
print(soma)
-- EXECUTION TIME:
0.212891
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
